# EasyWindows32

./: .gitignore  CMakeLists.txt  EasyWindows32.hpp  LICENSE  README.md
example/: example.cpp  example2.cpp
